--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/JoseAle2610/ShesterBot#readme",
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "bulma": "^0.9.3",
     "dotenv": "^10.0.0",
     "next": "^12.1.6",
     "node-cron": "^3.0.0",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "telegraf": "^4.4.1",
