--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "swr": "^1.3.0",
     "telegraf": "^4.4.1",
     "util": "^0.12.4",
     "yarn": "^1.22.11"
